# template

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement_request.yml  feature_request.yml
.github/workflows/: ci.yml
